Updated code + saving progress

--- a/Starter_Code 5/Starter_Files/visual_data_analysis.ipynb
+++ b/Starter_Code 5/Starter_Files/visual_data_analysis.ipynb
@@ -55,10 +55,32 @@
    "source": [
     "# loading data for card holder 2 and 18 from the database\n",
     "# Write the query\n",
+    "# query = \"\"\"\n",
+    "#        YOUR QUERY HERE\n",
+    "#        \"\"\"\n",
+    "# Create a DataFrame from the query result. HINT: Use pd.read_sql(query, engine)\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Create a connection to the database\n",
+    "engine = create_engine(\"postgresql://postgres:postgres@localhost:5432/fraud_detection\")\n",
+    "\n",
+    "# loading data for card holder 2 and 18 from the database\n",
+    "# Write the query\n",
     "query = \"\"\"\n",
-    "        YOUR QUERY HERE\n",
+    "        SELECT *\n",
+    "        FROM transaction\n",
+    "        WHERE card_id IN (2, 18);\n",
     "        \"\"\"\n",
-    "# Create a DataFrame from the query result. HINT: Use pd.read_sql(query, engine)\n"
+    "\n",
+    "# Try executing the query and handle any errors\n",
+    "try:\n",
+    "    # Create a DataFrame from the query result. HINT: Use pd.read_sql(query, engine)\n",
+    "    cardholders_transactions_df = pd.read_sql(query, engine)\n",
+    "    print(\"Query executed successfully!\")\n",
+    "except Exception as e:\n",
+    "    print(\"Error executing query:\", e)\n",
+    "\n"
    ]
   },
   {
@@ -67,7 +89,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot for cardholder 2\n"
+    "# Plot for cardholder 2\n",
+    "cardholder_2_plot = cardholders_transactions_df[cardholders_transactions_df['card_id'] == 2].hvplot.line(\n",
+    "    x='transaction_date',\n",
+    "    y='amount',\n",
+    "    xlabel='Transaction Date',\n",
+    "    ylabel='Transaction Amount',\n",
+    "    title='Transaction Trend for Cardholder 2'\n",
+    ")\n"
    ]
   },
   {
@@ -76,7 +105,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot for cardholder 18\n"
+    "# Plot for cardholder 18\n",
+    "cardholder_18_plot = cardholders_transactions_df[cardholders_transactions_df['card_id'] == 18].hvplot.line(\n",
+    "    x='transaction_date',\n",
+    "    y='amount',\n",
+    "    xlabel='Transaction Date',\n",
+    "    ylabel='Transaction Amount',\n",
+    "    title='Transaction Trend for Cardholder 18'\n",
+    ")\n"
    ]
   },
   {
@@ -85,7 +121,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combined plot for card holders 2 and 18\n"
+    "# Combined plot for card holders 2 and 18\n",
+    "combined_plot = cardholders_transactions_df.hvplot.line(\n",
+    "    x='transaction_date',\n",
+    "    y='amount',\n",
+    "    by='card_id',\n",
+    "    xlabel='Transaction Date',\n",
+    "    ylabel='Transaction Amount',\n",
+    "    title='Transaction Trend for Cardholders 2 and 18'\n",
+    ")"
    ]
   },
   {
@@ -111,10 +155,28 @@
    "source": [
     "# loading data of daily transactions from jan to jun 2018 for card holder 25\n",
     "# Write the query\n",
+    "# query = \"\"\"\n",
+    "#        YOUR QUERY HERE\n",
+    "#        \"\"\"\n",
+    "# Create a DataFrame from the query result. HINT: Use pd.read_sql(query, engine)\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Create a connection to the database\n",
+    "engine = create_engine(\"postgresql://postgres:postgres@localhost:5432/fraud_detection\")\n",
+    "\n",
+    "# loading data of daily transactions from jan to jun 2018 for card holder 25\n",
+    "# Write the query\n",
     "query = \"\"\"\n",
-    "        YOUR QUERY HERE\n",
+    "        SELECT *\n",
+    "        FROM transaction\n",
+    "        WHERE card_id = 25\n",
+    "            AND EXTRACT(YEAR FROM transaction_date) = 2018\n",
+    "            AND EXTRACT(MONTH FROM transaction_date) BETWEEN 1 AND 6;\n",
     "        \"\"\"\n",
-    "# Create a DataFrame from the query result. HINT: Use pd.read_sql(query, engine)\n"
+    "\n",
+    "# Create a DataFrame from the query result\n",
+    "daily_transactions_df = pd.read_sql(query, engine)\n"
    ]
   },
   {
@@ -123,7 +185,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loop to change the numeric month to month names\n"
+    "# loop to change the numeric month to month names\n",
+    "month_names = {1: 'January', 2: 'February', 3: 'March', 4: 'April', 5: 'May', 6: 'June'}\n",
+    "\n",
+    "daily_transactions_df['month'] = daily_transactions_df['transaction_date'].dt.month.map(month_names)\n"
    ]
   },
   {
@@ -132,16 +197,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating the six box plots using hvPlot\n"
+    "# Creating the six box plots using hvPlot\n",
+    "box_plots = daily_transactions_df.hvplot.box(\n",
+    "    y='amount',\n",
+    "    by='month',\n",
+    "    xlabel='Month',\n",
+    "    ylabel='Transaction Amount',\n",
+    "    title='Expenditure Data for Cardholder ID 25 (Jan-Jun 2018)',\n",
+    "    rot=45\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python [conda env:dev] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-dev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
