updated challenge.ipynb notebook

--- a/Starter_Code 5/Starter_Files/challenge.ipynb
+++ b/Starter_Code 5/Starter_Files/challenge.ipynb
@@ -732,6 +732,197 @@
     "# Display the box plots\n",
     "box_plots\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to the database was successful!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine, text\n",
+    "\n",
+    "# Create a connection to the database\n",
+    "engine = create_engine(\"postgresql://postgres:bootcamp24@localhost:5432/fraud_detection\")\n",
+    "\n",
+    "# Test the connection\n",
+    "try:\n",
+    "    connection = engine.connect()\n",
+    "    print(\"Connection to the database was successful!\")\n",
+    "    connection.close()\n",
+    "except Exception as e:\n",
+    "    print(\"Error connecting to the database:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tables in the database:\n",
+      "          table_name\n",
+      "0        card_holder\n",
+      "1        credit_card\n",
+      "2  merchant_category\n",
+      "3           merchant\n",
+      "4        transaction\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to list all tables\n",
+    "list_tables_query = text(\"\"\"\n",
+    "SELECT table_name\n",
+    "FROM information_schema.tables\n",
+    "WHERE table_schema = 'public';\n",
+    "\"\"\")\n",
+    "\n",
+    "# Execute the query and load the results into a DataFrame\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        tables_df = pd.read_sql_query(list_tables_query, connection)\n",
+    "    print(\"Tables in the database:\")\n",
+    "    print(tables_df)\n",
+    "except Exception as e:\n",
+    "    print(\"Error executing query:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Structure of table transaction:\n",
+      "   column_name         data_type\n",
+      "0           id            bigint\n",
+      "1       amount  double precision\n",
+      "2         card            bigint\n",
+      "3  id_merchant            bigint\n",
+      "4         date              text\n",
+      "Structure of table credit_card:\n",
+      "     column_name data_type\n",
+      "0           card    bigint\n",
+      "1  cardholder_id    bigint\n",
+      "Structure of table card_holder:\n",
+      "  column_name data_type\n",
+      "0          id    bigint\n",
+      "1        name      text\n",
+      "Structure of table merchant:\n",
+      "            column_name data_type\n",
+      "0                    id    bigint\n",
+      "1  id_merchant_category    bigint\n",
+      "2                  name      text\n",
+      "Structure of table merchant_category:\n",
+      "  column_name data_type\n",
+      "0          id    bigint\n",
+      "1        name      text\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to describe the structure of a table\n",
+    "def describe_table(table_name):\n",
+    "    describe_table_query = text(f\"\"\"\n",
+    "    SELECT column_name, data_type\n",
+    "    FROM information_schema.columns\n",
+    "    WHERE table_name = '{table_name}';\n",
+    "    \"\"\")\n",
+    "    \n",
+    "    try:\n",
+    "        with engine.connect() as connection:\n",
+    "            table_structure_df = pd.read_sql_query(describe_table_query, connection)\n",
+    "        print(f\"Structure of table {table_name}:\")\n",
+    "        print(table_structure_df)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error executing query for table {table_name}:\", e)\n",
+    "\n",
+    "# Describe the structure of the 'transaction' table\n",
+    "describe_table('transaction')\n",
+    "describe_table('credit_card')\n",
+    "describe_table('card_holder')\n",
+    "describe_table('merchant')\n",
+    "describe_table('merchant_category')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Foreign key constraints for table transaction:\n",
+      "Empty DataFrame\n",
+      "Columns: [table_schema, table_name, column_name, foreign_table_schema, foreign_table_name, foreign_column_name]\n",
+      "Index: []\n",
+      "Foreign key constraints for table credit_card:\n",
+      "Empty DataFrame\n",
+      "Columns: [table_schema, table_name, column_name, foreign_table_schema, foreign_table_name, foreign_column_name]\n",
+      "Index: []\n",
+      "Foreign key constraints for table merchant:\n",
+      "Empty DataFrame\n",
+      "Columns: [table_schema, table_name, column_name, foreign_table_schema, foreign_table_name, foreign_column_name]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to list foreign key constraints for a table\n",
+    "def list_foreign_keys(table_name):\n",
+    "    foreign_keys_query = text(f\"\"\"\n",
+    "    SELECT\n",
+    "        tc.table_schema, \n",
+    "        tc.table_name, \n",
+    "        kcu.column_name, \n",
+    "        ccu.table_schema AS foreign_table_schema,\n",
+    "        ccu.table_name AS foreign_table_name,\n",
+    "        ccu.column_name AS foreign_column_name \n",
+    "    FROM \n",
+    "        information_schema.table_constraints AS tc \n",
+    "        JOIN information_schema.key_column_usage AS kcu\n",
+    "          ON tc.constraint_name = kcu.constraint_name\n",
+    "          AND tc.table_schema = kcu.table_schema\n",
+    "        JOIN information_schema.constraint_column_usage AS ccu\n",
+    "          ON ccu.constraint_name = tc.constraint_name\n",
+    "          AND ccu.table_schema = tc.table_schema\n",
+    "    WHERE tc.constraint_type = 'FOREIGN KEY' AND tc.table_name='{table_name}';\n",
+    "    \"\"\")\n",
+    "    \n",
+    "    try:\n",
+    "        with engine.connect() as connection:\n",
+    "            foreign_keys_df = pd.read_sql_query(foreign_keys_query, connection)\n",
+    "        print(f\"Foreign key constraints for table {table_name}:\")\n",
+    "        print(foreign_keys_df)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error executing query for table {table_name}:\", e)\n",
+    "\n",
+    "# List foreign key constraints for the 'transaction' table\n",
+    "list_foreign_keys('transaction')\n",
+    "\n",
+    "# List foreign key constraints for the 'credit_card' table\n",
+    "list_foreign_keys('credit_card')\n",
+    "\n",
+    "# List foreign key constraints for the 'merchant' table\n",
+    "list_foreign_keys('merchant')\n"
+   ]
   }
  ],
  "metadata": {
